assets/scss/layout/_navigation.scss
.nav {
    $this: &;

    position: fixed;
    top: 0;
    bottom: 0;
    right: -30rem;
    z-index: $level-two;
    width: 30rem;
    padding: 7rem 3rem 3rem;
    background: #fefefe;
    transition: all .2s ease;
    text-align: right;

    &.open {
        right: 0
    }

    ol {
        margin: 0 0 1.6rem 0;
        padding: 0;
    }

    &__item {
        display: block;
        margin: 0
    }

    &__link {
        display: inline-block;
        position: relative;
        color: #000;
        font-family: "Montserrat", Arial, 'Helvetica Neue', Helvetica, sans-serif;
        font-weight: 700;
        font-style: italic;
        font-size: 2rem;
        text-transform: uppercase
    }

    &__link:visited {
        color: #000
    }

    &__link:hover,
    &__link.router-link-active {
        color: #d90815
    }

    &__link:before {
        content: "";
        display: block;
        position: absolute;
        right: .1rem;
        bottom: -.3rem;
        left: .1rem;
        height: .3rem;
        background-color: #d90815;
        transform: scaleX(0);
        transform-origin: 100% 50%;
        transition: transform 0.4s cubic-bezier(0.23, 1, 0.32, 1)
    }

    &__link:hover:before {
        transform: scaleX(1);
        transform-origin: 0 50%;
        transition: transform 0 0.4s cubic-bezier(0.23, 1, 0.32, 1)
    }

    &__social {

        #{$this}__item {
            display: block
        }

        #{$this}__link {
            font-size: 1.6rem
        }

        #{$this}__link:before {
            height: .2rem
        }
    }

    svg {
        position: relative;
        top: .3rem;
        width: 1.6rem;
    }

    &__toggle {
        position: fixed;
        top: 0;
        right: 0;
        z-index: $level-three;
        width: 8rem;
        height: 8rem;
        padding: 0;
        background: #fefefe;
        transition: all .2s ease;

        svg {
            position: absolute;
            top: 3.2rem;
            right: 2.4rem;
            width: 3rem;
            padding: 0 .3rem
        }

        path {
            opacity: 1;
            transition: all linear .2s;
            fill: #000
        }

        &:hover path {
            fill: #d90815
        }

        &:focus {
            outline: none
        }

        &.active path:nth-child(1) {
            transform: rotate(45deg);
            transform-origin: 0 0
        }

        &.active path:nth-child(2) {
            opacity: 0
        }

        &.active path:nth-child(3) {
            transform: rotate(-45deg);
            transform-origin: 0 100%
        }
    }

    @media (max-width: 800px) {

        &__toggle {
            width:5rem;
            height: 5rem

            svg {
                top: 2rem;
                right: 1rem
            }
        }
    }

    @media (max-width: $break-mobile-wide) {
        padding-top: 8rem;
    }

    @media (max-width: $break-mobile) {
        width: 100vw;
        right: -100vw;
    }
}

